# blog

./: .dockerignore  .gitignore  README.md  create_basics.txt  how_to_start.txt  makefile  package-lock.json  package.json  package_KOPIE.json  pyproject.toml  requirements.txt  webpack-stats.json  webpack.config.js  webpack.config_KOPIE_3.js
blog/accounts/: api.py  urls.py
blog/blog/: settings.py  urls.py  views.py
blog/frontend/: admin.py  models.py  views.py
blog/frontend/src/: App.js  axios.js  index.css  index.js
blog/frontend/src/components/: App.js
blog/frontend/src/containers/Map/: Map.js  (+2 more)
blog/frontend/static/frontend/: main.js
blog/frontend/templates/frontend/: index.html
blog/post/: admin.py  api.py  form.py  models.py  serializers.py  views.py
blog/post/migrations/: 0001_initial.py  0002_auto_20190308_1600.py  0002_auto_20190409_2148.py  0002_auto_20190521_2132.py  0002_post_image.py  0003_auto_20190328_2046.py  0003_auto_20190409_2156.py  0003_auto_20190522_2010.py  0004_auto_20190409_2203.py  0004_auto_20190603_2020.py  0005_post_post_date.py  0005_remove_post_author.py  0006_post_author.py  0006_remove_post_summary.py  0007_auto_20190409_2308.py  0007_post_location.py  0008_images_caption.py  0008_post_publish.py  0009_auto_20190410_2226.py
blog/route/: admin.py  api.py  models.py  serializers.py  urls.py
blog/route/migrations/: 0001_initial.py  0002_remove_route_author.py  0003_route_publish.py
config/: sample.env
docker/: db.Dockerfile  dev.Dockerfile  docker-compose copy.yml  docker-compose.yml  nginx.Dockerfile
nginx/: blog.conf
(+53 files in other folders)
