[tool.poetry]
name = "my_dev"
version = "0.1.0"
description = ""
authors = ["Cornel"]

[tool.poetry.dependencies]
python = "^3.9"
Django = "2.1.5"
djangorestframework = "3.9.1"
djangorestframework-gis = "0.17"
django-rest-knox = "3.6.0"
httpie = "1.0.2"
django-webpack-loader = "0.6.0"
psycopg2-binary = "2.8.6"
django-leaflet = "0.24.0"
django-geojson = "2.12.0"
django-guardian = "1.5.0"
Pillow = "8.0.0"
django-cors-headers = "3.0.2"
gunicorn = "20.1.0"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
pylint = "^2.7.2"
pytest = "*"

[tool.black]
line-length = 120

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
